# aria

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  b  pgo
aria-bin/: Cargo.toml
aria-bin/src/: file_eval.rs  main.rs  repl_eval.rs  repl_preamble.aria  test.rs
compiler-lib/: Cargo.toml
examples/: add_license_marker.aria  advent_of_code_2024_day3.aria  currency.aria  dir.aria  github_user.aria  parser.aria  peano.aria  sieve.aria  string_escapes.aria
lsp/: Cargo.toml
microbenchmarks/: attribute_read.aria  attribute_write.aria  enum_case.aria  infra.aria  int_arith.aria  list_filled.aria  list_from_closure.aria  list_read.aria  list_write.aria  map_loop.aria  method_call.aria  sieve.aria
opcodes-lib/: Cargo.toml
parser-lib/: Cargo.toml
test-bin/: Cargo.toml
tests/: atan.point5.aria  atan_neg1.aria  bind_of_func_on_builtin.aria  builtin_type_func_takes_This.aria  chained_try_unwrap.aria  complex_numbers.aria  complex_of_self.aria  complex_reverse_minus.aria  custom_to_json_value.aria  custom_try_unwrap_protocol.aria  decimal.aria  decimal_hash.aria  decimal_prettyprint.aria  dir_entries.aria  enum_without_payload.aria  float_atan.aria  float_exp.aria  float_exp_neg50.aria  float_ln.aria  float_log_exp.aria  float_parse_scientific.aria  format_of_nested_brace.aria  guard_on_return.aria  hash_instant.aria  http_get_headers.aria  http_post.aria  http_post_json.aria  http_request_custom_status.aria  http_simple_get.aria  inner_outer_loop.aria  instant_from_unix_ts.aria  instant_offset_breaks_eq.aria  isa_intersection.aria  isa_mixin_union.aria  (+43 more)
(+149 files in other folders)
