[workspace]
members = [
    "aria-bin",
    "compiler-lib",
    "lsp",
    "native-libs/*",
    "opcodes-lib",
    "parser-lib",
    "test-bin",
    "vm-lib",
]
resolver = "2"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = true

[profile.pgo]
inherits = "release"
lto = "thin"
debug = true
