[package]
name = "aria-bin"
version = "0.9.20251222"
edition = "2024"

[dependencies]
opcodes-lib = { path = "../opcodes-lib" }
parser-lib = { path = "../parser-lib" }
compiler-lib = { path = "../compiler-lib" }
vm-lib = { path = "../vm-lib" }
clap = { version = "4.5.54", features = ["derive"] }
ariadne = { git = "https://github.com/zesterer/ariadne.git", rev="b60b500" }
reedline = "0.44.0"
pprof = { version = "0.15.0", features = ["cpp", "default", "flamegraph", "framehop", "framehop-unwinder", "perfmaps", "_protobuf", "prost-codec"] }

[[bin]]
name = "aria"
path = "src/main.rs"
